* Corrected spelling mistakes in POD, pointed out by H.Merijn Brand
* Amend SQLite source engine to set SYNCHRONOUS pragma to OFF
* Make sure that Selfupdate checks if CPANPLUS::Dist::Build is
  installed or not and update it if it is. Spotted by Ilmari

Changes for 0.9004      Sat May  8 22:21:04 2010
================================================
* Applied a patch from Schwern RT #53133 "test failure occurs if
  the build directory is symlinked"
* Explicitly set the location of cpanp-run-perl when under PERL_CORE
  in t/inc/conf.pl
* Make sure that we find cpanp-run-perl in ../../utils when PERL_CORE
* Apply a patch from Barbie [RT #56768], that fixes regex in 
  RELEVANT_TEST_RESULT
* Fixed a typo in the POD for cpan2dist, pointed out by Babar 
  (Olivier Raginel) on irc.
* Add a BEGIN {} block to cpanp-run-perl this resolves RT #55964 
  and RT #57106
    
Changes for 0.9003      Mon Mar 15 13:51:12 2010
================================================
* Resolve warnings when using blead perl, reported by Apocalypse RT #55501
* Applied patch from Apocalypse RT #55541 that changes the 
  behviour when a prereq on a core-only module is detected. We 
  raise a warning now, but will proceed with the installation.
  This is how CPAN.pm handles it.
* Removed one duff mirror and an out-of-date mirror from
  our default mirror list. Replaced with fast-sync mirrors.

Changes for 0.9002      Fri Mar 12 13:11:00 2010
================================================
* Added support for CPAN Testers 2.0 (David Golden)

Changes for 0.9001      Thu Dec 24 10:21:11 2009
================================================
* RT #52988 Regression in Internals::Utils, reported by CRAKRJACK
* Fix a regression with dist_type not being propagated

Changes for 0.90        Thu Dec 17 21:40:13 2009
================================================
* Version bump

Changes for 0.89_12     Mon Dec  7 13:33:16 2009
================================================